postgresql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  clusterIP: None
  selector:
    app: postgresql
  ports:
    - port: 5432
      name: postgres
